--- a/translations/global.en.xlf
+++ b/translations/global.en.xlf
@@ -2825,5 +2825,131 @@
         <target>Hidden message from %user%. Click to show.</target>
       </segment>
     </unit>
+    <unit id="iZZF_a6">
+      <notes>
+        <note category="german">%user% hat dich geblockt und wurde daher aus der Liste der Empfänger für diese Nachricht gestrichen.</note>
+      </notes>
+      <segment>
+        <source>%user% hat dich geblockt und wurde daher aus der Liste der Empfänger für diese Nachricht gestrichen.</source>
+        <target>%user% user has blocked you and has therefore been removed from the list of recipients for this message.</target>
+      </segment>
+    </unit>
+    <unit id="eEWrS7n" name="%users% und %last_user%">
+      <notes>
+        <note category="german">%users% und %last_user%</note>
+      </notes>
+      <segment>
+        <source>%users% und %last_user%</source>
+        <target>%users% and %last_user%</target>
+      </segment>
+    </unit>
+    <unit id="9JfHrKu">
+      <notes>
+        <note category="german">%users% haben dich geblockt und wurden daher aus der Liste der Empfänger für diese Nachricht gestrichen.</note>
+      </notes>
+      <segment>
+        <source>%users% haben dich geblockt und wurden daher aus der Liste der Empfänger für diese Nachricht gestrichen.</source>
+        <target>%users% have blocked you and have therefore been removed from the list of recipients for this message.</target>
+      </segment>
+    </unit>
+    <unit id="tgTK6TI" name="Du hast diesen Spieler auf deine Blacklist gesetzt.">
+      <notes>
+        <note category="german">Du hast diesen Spieler auf deine Blacklist gesetzt.</note>
+      </notes>
+      <segment>
+        <source>Du hast diesen Spieler auf deine Blacklist gesetzt.</source>
+        <target>This user has been blacklisted.</target>
+      </segment>
+    </unit>
+    <unit id="C4uSYMq" name="Du hast diesen Spieler von deiner Blacklist genommen.">
+      <notes>
+        <note category="german">Du hast diesen Spieler von deiner Blacklist genommen.</note>
+      </notes>
+      <segment>
+        <source>Du hast diesen Spieler von deiner Blacklist genommen.</source>
+        <target>This user has been removed from your blacklist.</target>
+      </segment>
+    </unit>
+    <unit id="lYFv71g" name="Du hast %user% blockiert.">
+      <notes>
+        <note category="german">Du hast %user% blockiert.</note>
+      </notes>
+      <segment>
+        <source>Du hast %user% blockiert.</source>
+        <target>You've blacklisted %user%.</target>
+      </segment>
+    </unit>
+    <unit id="gURDnkT" name="Blockade aufheben">
+      <notes>
+        <note category="german">Blockade aufheben</note>
+      </notes>
+      <segment>
+        <source>Blockade aufheben</source>
+        <target>Unblock</target>
+      </segment>
+    </unit>
+    <unit id="NJp6yhE" name="Spieler blockieren">
+      <notes>
+        <note category="german">Spieler blockieren</note>
+      </notes>
+      <segment>
+        <source>Spieler blockieren</source>
+        <target>Block player</target>
+      </segment>
+    </unit>
+    <unit id="Ki.EhtV" name="%user% blockieren">
+      <notes>
+        <note category="german">%user% blockieren</note>
+      </notes>
+      <segment>
+        <source>%user% blockieren</source>
+        <target>Block %user%</target>
+      </segment>
+    </unit>
+    <unit id="cIrelgU">
+      <notes>
+        <note category="german">Wenn du diesen Spieler blockierst, kann er dir keine neuen Nachrichten schicken. Werdet ihr beide von einer dritten Person in eine Gruppennachricht hinzugefügt, so werden Beiträge des blockierten Spielers standartmäßig für dich versteckt.</note>
+      </notes>
+      <segment>
+        <source>Wenn du diesen Spieler blockierst, kann er dir keine neuen Nachrichten schicken. Werdet ihr beide von einer dritten Person in eine Gruppennachricht hinzugefügt, so werden Beiträge des blockierten Spielers standartmäßig für dich versteckt.</source>
+        <target>If you block this player, he will not be able to send you new messages. If you are both added to a group message by a third person, posts from the blocked player will be hidden from you by default.</target>
+      </segment>
+    </unit>
+    <unit id="XZjzgfL" name="Möchtest du fortfahren?">
+      <notes>
+        <note category="german">Möchtest du fortfahren?</note>
+      </notes>
+      <segment>
+        <source>Möchtest du fortfahren?</source>
+        <target>Proceed?</target>
+      </segment>
+    </unit>
+    <unit id="hQmss_b" name="Absender blockieren">
+      <notes>
+        <note category="german">Absender blockieren</note>
+      </notes>
+      <segment>
+        <source>Absender blockieren</source>
+        <target>Block sender</target>
+      </segment>
+    </unit>
+    <unit id="aN1frHt">
+      <notes>
+        <note category="german">Wenn du den Absender dieser Nachricht blockierst, kann dieser dir keine neuen Nachrichten schicken. Werdet ihr beide von einer dritten Person in eine Gruppennachricht hinzugefügt, so werden Beiträge des blockierten Spielers standartmäßig für dich versteckt.</note>
+      </notes>
+      <segment>
+        <source>Wenn du den Absender dieser Nachricht blockierst, kann dieser dir keine neuen Nachrichten schicken. Werdet ihr beide von einer dritten Person in eine Gruppennachricht hinzugefügt, so werden Beiträge des blockierten Spielers standartmäßig für dich versteckt.</source>
+        <target>If you block the sender of this message, he will not be able to send you new messages. If you are both added to a group message by a third person, posts from the blocked player will be hidden from you by default.</target>
+      </segment>
+    </unit>
+    <unit id="q8KTox4" name="Dieser Spieler hat dich geblockt. Du kannst ihm keine Nachricht mehr schicken.">
+      <notes>
+        <note category="german">Dieser Spieler hat dich geblockt. Du kannst ihm keine Nachricht mehr schicken.</note>
+      </notes>
+      <segment>
+        <source>Dieser Spieler hat dich geblockt. Du kannst ihm keine Nachricht mehr schicken.</source>
+        <target>This user has blocked you, you cannot send them messages any more.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
