--- a/translations/soul.de.xlf
+++ b/translations/soul.de.xlf
@@ -3205,5 +3205,23 @@
         <target>Verlauf meiner Städte</target>
       </segment>
     </unit>
+    <unit id="vsOyofZ" name="Schwarzes Brett">
+      <notes>
+        <note category="german">Schwarzes Brett</note>
+      </notes>
+      <segment>
+        <source>Schwarzes Brett</source>
+        <target>Schwarzes Brett</target>
+      </segment>
+    </unit>
+    <unit id="Q2jvlBg" name="Du kannst das Schwarze Brett nicht verwenden.">
+      <notes>
+        <note category="german">Du kannst das Schwarze Brett nicht verwenden.</note>
+      </notes>
+      <segment>
+        <source>Du kannst das Schwarze Brett nicht verwenden.</source>
+        <target>Du kannst das Schwarze Brett nicht verwenden.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
