FR Translation for new admin ban

--- a/translations/admin.fr.xlf
+++ b/translations/admin.fr.xlf
@@ -3472,7 +3472,7 @@
       </notes>
       <segment>
         <source>Verwendung des Schwarzen Bretts verbieten</source>
-        <target>Verwendung des Schwarzen Bretts verbieten</target>
+        <target>Utilisation du tableau noir</target>
       </segment>
     </unit>
   </file>
