--- a/translations/game.de.xlf
+++ b/translations/game.de.xlf
@@ -6838,13 +6838,13 @@
         <target>%username% wurde standrechtlich erschossen.</target>
       </segment>
     </unit>
-    <unit id="tkJcWLe" name="%username% gehört keiner Stadt an.">
+    <unit id="tkJcWLe" name="Dieser Bürger gehört keiner Stadt an.">
       <notes>
-        <note category="german">%username% gehört keiner Stadt an.</note>
+        <note category="german">Dieser Bürger gehört keiner Stadt an.</note>
       </notes>
       <segment>
-        <source>%username% gehört keiner Stadt an.</source>
-        <target>%username% gehört keiner Stadt an.</target>
+        <source>Dieser Bürger gehört keiner Stadt an.</source>
+        <target>Dieser Bürger gehört keiner Stadt an.</target>
       </segment>
     </unit>
     <unit id="a8CDdVQ" name="%citizen% wurde standrechtlich erschossen. Lang lebe das Diktat!">
