--- a/translations/game.en.xlf
+++ b/translations/game.en.xlf
@@ -6821,13 +6821,13 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
         <target>%username% was shot dead.</target>
       </segment>
     </unit>
-    <unit id="tkJcWLe" name="%username% gehört keiner Stadt an.">
+    <unit id="tkJcWLe" name="Dieser Bürger gehört keiner Stadt an.">
       <notes>
-        <note category="german">%username% gehört keiner Stadt an.</note>
+        <note category="german">Dieser Bürger gehört keiner Stadt an.</note>
       </notes>
       <segment>
-        <source>%username% gehört keiner Stadt an.</source>
-        <target>%username% does not belong to any Town.</target>
+        <source>Dieser Bürger gehört keiner Stadt an.</source>
+        <target>This citizen does not belong to any Town.</target>
       </segment>
     </unit>
     <unit id="a8CDdVQ" name="%citizen% wurde standrechtlich erschossen. Lang lebe das Diktat!">
