--- a/translations/game.es.xlf
+++ b/translations/game.es.xlf
@@ -6821,13 +6821,13 @@
         <target>%username% ha sido asesinado de un balazo.</target>
       </segment>
     </unit>
-    <unit id="tkJcWLe" name="%username% gehört keiner Stadt an.">
+    <unit id="tkJcWLe" name="Dieser Bürger gehört keiner Stadt an.">
       <notes>
-        <note category="german">%username% gehört keiner Stadt an.</note>
+        <note category="german">Dieser Bürger gehört keiner Stadt an.</note>
       </notes>
       <segment>
-        <source>%username% gehört keiner Stadt an.</source>
-        <target>%username% no pertenece a ningún pueblo.</target>
+        <source>Dieser Bürger gehört keiner Stadt an.</source>
+        <target>Este habitante no pertenece a ningún pueblo.</target>
       </segment>
     </unit>
     <unit id="a8CDdVQ" name="%citizen% wurde standrechtlich erschossen. Lang lebe das Diktat!">
