--- a/translations/game.fr.xlf
+++ b/translations/game.fr.xlf
@@ -7258,13 +7258,13 @@
         <target>%username% a été abattu.</target>
       </segment>
     </unit>
-    <unit id="tkJcWLe" name="%username% gehört keiner Stadt an.">
+    <unit id="tkJcWLe" name="Dieser Bürger gehört keiner Stadt an.">
       <notes>
-        <note category="german">%username% gehört keiner Stadt an.</note>
+        <note category="german">Dieser Bürger gehört keiner Stadt an.</note>
       </notes>
       <segment>
-        <source>%username% gehört keiner Stadt an.</source>
-        <target>%username% n'appartient pas à une ville.</target>
+        <source>Dieser Bürger gehört keiner Stadt an.</source>
+        <target>Ce citoyen n'appartient pas à une ville.</target>
       </segment>
     </unit>
     <unit id="J2aR_r9">
