ES translation of death by reactor explosion message

--- a/translations/game.es.xlf
+++ b/translations/game.es.xlf
@@ -20118,7 +20118,7 @@
       </notes>
       <segment>
         <source>Du warst gerade dabei dich daheim einzubunkern, als dir plötzlich auffällt dass etwas mit dem Reaktor nicht zu stimmen scheint, auf den die anderen Bürger so stolz sind... jetzt wurden sie durch eine ohrenbetäubende Explosion ausgelöscht. Als du wieder zu dir kommst liegst du in einem riesigen Krater, der einmal deine Stadt war; dein Blut kocht und deine Haut schmilzt dir vom Fleisch. Erst nach einigen Minuten unerträglicher Schmerzen verlässt auch du diese Welt.</source>
-        <target>Du warst gerade dabei dich daheim einzubunkern, als dir plötzlich auffällt dass etwas mit dem Reaktor nicht zu stimmen scheint, auf den die anderen Bürger so stolz sind... jetzt wurden sie durch eine ohrenbetäubende Explosion ausgelöscht. Als du wieder zu dir kommst liegst du in einem riesigen Krater, der einmal deine Stadt war; dein Blut kocht und deine Haut schmilzt dir vom Fleisch. Erst nach einigen Minuten unerträglicher Schmerzen verlässt auch du diese Welt.</target>
+        <target>Estabas a punto de refugiarte en tu casa, cuando de repente te das cuenta de que algo va mal en el reactor del que los demás ciudadanos están tan orgullosos... ahora han sido aniquilados por una explosión ensordecedora. Cuando recuperas la conciencia, yaces en un enorme cráter que antes era tu ciudad; la sangre te hierve y la piel se te derrite. Sólo después de unos minutos de dolor insoportable dejas este mundo.</target>
       </segment>
     </unit>
     <unit id="6ntsFNr">
