--- a/translations/game.en.xlf
+++ b/translations/game.en.xlf
@@ -6821,7 +6821,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
         <target>%username% was shot dead.</target>
       </segment>
     </unit>
-    <unit id="tkJcWLe" name="Dieser Bürger gehört keiner Stadt an.">
+    <unit id="3mZhglJ" name="Dieser Bürger gehört keiner Stadt an.">
       <notes>
         <note category="german">Dieser Bürger gehört keiner Stadt an.</note>
       </notes>
@@ -20161,6 +20161,15 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
       <segment>
         <source>Achtung! Alle Spieler, die sich außerhalb der Stadt befinden, können danach nicht mehr rein.</source>
         <target>Warning, players outside the town will not beable to get back in.</target>
+      </segment>
+    </unit>
+    <unit id="cEtAFQ0" name="Es wurde eine Rauchbombe eingesetzt!">
+      <notes>
+        <note category="german">Es wurde eine Rauchbombe eingesetzt!</note>
+      </notes>
+      <segment>
+        <source>Es wurde eine Rauchbombe eingesetzt!</source>
+        <target>Es wurde eine Rauchbombe eingesetzt!</target>
       </segment>
     </unit>
   </file>
