--- a/translations/game.fr.xlf
+++ b/translations/game.fr.xlf
@@ -7258,7 +7258,7 @@
         <target>%username% a été abattu.</target>
       </segment>
     </unit>
-    <unit id="tkJcWLe" name="Dieser Bürger gehört keiner Stadt an.">
+    <unit id="3mZhglJ" name="Dieser Bürger gehört keiner Stadt an.">
       <notes>
         <note category="german">Dieser Bürger gehört keiner Stadt an.</note>
       </notes>
@@ -20190,6 +20190,15 @@
       <segment>
         <source>Achtung! Alle Spieler, die sich außerhalb der Stadt befinden, können danach nicht mehr rein.</source>
         <target>Attention, les joueurs hors de la ville ne pourront plus rentrer.</target>
+      </segment>
+    </unit>
+    <unit id="cEtAFQ0" name="Es wurde eine Rauchbombe eingesetzt!">
+      <notes>
+        <note category="german">Es wurde eine Rauchbombe eingesetzt!</note>
+      </notes>
+      <segment>
+        <source>Es wurde eine Rauchbombe eingesetzt!</source>
+        <target>Un fumigène a été utilisé !</target>
       </segment>
     </unit>
   </file>
