--- a/translations/items.en.xlf
+++ b/translations/items.en.xlf
@@ -8417,5 +8417,32 @@ You put every effort into it. Then, after some time passes, you retrieve a {item
         <target>Unglaublich! Die ganze Gier, die dich innerlich aufgefressen hat, verschwindet langsam. Ist es wirklich möglich, dass du wieder ein Mensch geworden bist?</target>
       </segment>
     </unit>
+    <unit id="s9W2MOB">
+      <notes>
+        <note category="german">Du hast {items_consume_1} verwendet, um das Wasser in {item_from} zu reinigen. Du hast {items_spawn} erhalten...</note>
+      </notes>
+      <segment>
+        <source>Du hast {items_consume_1} verwendet, um das Wasser in {item_from} zu reinigen. Du hast {items_spawn} erhalten...</source>
+        <target>Du hast {items_consume_1} verwendet, um das Wasser in {item_from} zu reinigen. Du hast {items_spawn} erhalten...</target>
+      </segment>
+    </unit>
+    <unit id="FZmpHwV">
+      <notes>
+        <note category="german">Sie greifen einen Zombie mit Ihrem {item} an, aber &lt;strong&gt;er reagiert nicht einmal&lt;/strong&gt; und macht weiter!</note>
+      </notes>
+      <segment>
+        <source>Sie greifen einen Zombie mit Ihrem {item} an, aber &lt;strong&gt;er reagiert nicht einmal&lt;/strong&gt; und macht weiter!</source>
+        <target><![CDATA[Sie greifen einen Zombie mit Ihrem {item} an, aber <strong>er reagiert nicht einmal</strong> und macht weiter!]]></target>
+      </segment>
+    </unit>
+    <unit id="nnxBJDq" name="Die Waffe hat &lt;strong&gt;keine Batterie mehr&lt;/strong&gt;.">
+      <notes>
+        <note category="german">Die Waffe hat &lt;strong&gt;keine Batterie mehr&lt;/strong&gt;.</note>
+      </notes>
+      <segment>
+        <source>Die Waffe hat &lt;strong&gt;keine Batterie mehr&lt;/strong&gt;.</source>
+        <target><![CDATA[Die Waffe hat <strong>keine Batterie mehr</strong>.]]></target>
+      </segment>
+    </unit>
   </file>
 </xliff>
