--- a/translations/buildings.fr.xlf
+++ b/translations/buildings.fr.xlf
@@ -2581,7 +2581,7 @@
       </notes>
       <segment>
         <source>Dank diesem wahrlich großen Bauwerk können Bürger ihre Häuser noch aufwändiger ausbauen.</source>
-        <target>Ce chantier de grande ampleur fourni toutes les bases nécessaires pour la construction de maisons individuelles plus avancées.</target>
+        <target>Ce chantier de grande ampleur fournit toutes les bases nécessaires pour la construction de maisons individuelles plus avancées.</target>
       </segment>
     </unit>
     <unit id="rEndNN5">
